tests/samples/invalid/address_of_later_constant.pn

const ADDR: &i32 = &X;

fn foo()
{
	var addr: &i32 = &X;
}

const X: i32 = 0;
